[project]
name = "arc-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.32.1",
    "mss>=10.1.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pygetwindow>=0.0.9",
    "pynput>=1.8.1",
    "pytesseract>=0.3.13",
    "rich>=14.2.0",
    "ruff>=0.14.3",
]
